her-section: removed flex-basis on figure to avoid distorting

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -558,7 +558,6 @@ footer p {
 
     #hero-section figure {
         order: 2;
-        flex:4 0 450px;
         align-self: center;
     }
 
